--- a/testing/web-platform/tests/css/css-overflow/line-clamp/line-clamp-auto-025.tentative.html
+++ b/testing/web-platform/tests/css/css-overflow/line-clamp/line-clamp-auto-025.tentative.html
@@ -26,7 +26,7 @@ the
 clamp
 point
 is
-visible
+hidden
 <
 /
 title
@@ -99,13 +99,13 @@ href
 "
 reference
 /
+webkit
+-
 line
 -
 clamp
 -
-auto
--
-025
+005
 -
 ref
 .
@@ -133,9 +133,10 @@ clamp
 :
 auto
 is
+at
 the
 last
-one
+line
 where
 the
 box
@@ -145,38 +146,27 @@ doesn
 t
 overflow
 .
-Since
-non
--
-inline
-abspos
-have
-a
-clamp
-point
-after
-them
-and
-they
-don
+An
+immediately
+following
+box
+even
+if
+it
 '
-t
-take
-up
-any
-space
-in
-the
-container
+s
 an
 abspos
-right
-at
-the
-boundary
+that
+takes
+up
+no
+block
+size
 should
+still
 be
-visible
+hidden
 .
 "
 >
@@ -204,6 +194,11 @@ font
 /
 32px
 serif
+;
+padding
+:
+0
+4px
 ;
 background
 -
