--- a/testing/web-platform/tests/css/css-overflow/line-clamp/line-clamp-auto-034.tentative.html
+++ b/testing/web-platform/tests/css/css-overflow/line-clamp/line-clamp-auto-034.tentative.html
@@ -25,8 +25,9 @@ clamp
 :
 auto
 clamp
-between
-IFCs
+height
+after
+IFC
 <
 /
 title
@@ -99,13 +100,13 @@ href
 "
 reference
 /
+webkit
+-
 line
 -
 clamp
 -
-auto
--
-034
+005
 -
 ref
 .
@@ -128,25 +129,26 @@ line
 clamp
 :
 auto
-there
-can
-be
-a
+if
+the
+clamp
+height
+is
+after
+an
+IFC
+the
 clamp
 point
-between
-two
-IFCs
-.
-In
-that
-case
-no
-line
 will
-have
-an
-ellipsis
+be
+set
+after
+the
+last
+line
+before
+that
 .
 "
 >
@@ -251,6 +253,7 @@ class
 =
 "
 ifc
+red
 "
 >
 Line
@@ -261,25 +264,8 @@ Line
 /
 div
 >
-<
-div
-class
-=
-"
-ifc
-red
-"
->
 Line
 7
-Line
-8
-<
-/
-div
->
-Line
-9
 <
 /
 div
