Bug 1923020 [wpt PR 48493] - [initial-letter] Merge RTL tests into variants, a=testonly
Automatic update from web-platform-tests
[initial-letter] Merge RTL tests into variants

Following up crrev.com/c/5896658, this patch merges RTL tests into
wpt variants, so that the differences in the tests are more visible.

Also removed a left over in `initial-letter-raise-initial-ref.html` that
ran the script twice.

This patch has no behavior changes.

Change-Id: I0920c29f7f22aa25c487262be3232c95a28ef2a9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5907026
Commit-Queue: Kent Tamura <tkentchromium.org>
Auto-Submit: Koji Ishii <kojiichromium.org>
Reviewed-by: Kent Tamura <tkentchromium.org>
Cr-Commit-Position: refs/heads/main{#1364811}

--

wpt-commits: bac0059b2a0b2e975cbab2aa884cf8defa3c01e1
wpt-pr: 48493

UltraBlame original commit: bafcba1b74fd8bd164b9e68b6902b68da67e8986

--- a/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial-ref.html
+++ b/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial-ref.html
@@ -342,6 +342,26 @@ cap
 )
 ;
 }
+.
+rtl
+{
+direction
+:
+rtl
+;
+.
+fake
+-
+initial
+-
+letter
+{
+float
+:
+right
+;
+}
+}
 <
 /
 style
@@ -406,15 +426,4 @@ br
 <
 /
 div
->
-<
-script
->
-setupInitialLetterTestVariants
-(
-)
-;
-<
-/
-script
 >
