--- a/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial.html
+++ b/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial.html
@@ -206,6 +206,22 @@ descent
 "
 >
 <
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+class
+=
+rtl
+"
+>
+<
 style
 >
 .
@@ -291,6 +307,14 @@ in
 rendering
 *
 /
+}
+.
+rtl
+{
+direction
+:
+rtl
+;
 }
 <
 /
