Bug 1922765 [wpt PR 48465] - Align COOP noopener-allow-popups to spec changes, a=testonly
Automatic update from web-platform-tests
Align COOP noopener-allow-popups to spec changes (#48465)

This CL aligns the feature with the latest PR changes [1], ensuring
that noopener-allow-popups=>same-origin-allow-popups are BCG swapping,
and regular navigations from noopener-allow-popups to itself are not.

[1] https://github.com/whatwg/html/pull/10394/commits/0e6a6ba0704b8d0f31683349310493a352757788

Change-Id: I0a91b2f00793ee074ef73d5a45c332bd917cca95
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5905066
Reviewed-by: Camille Lamy <clamychromium.org>
Commit-Queue: Yoav Weiss (Shopify) <yoavweisschromium.org>
Cr-Commit-Position: refs/heads/main{#1364118}

Co-authored-by: Yoav Weiss <yoavweisschromium.org>
--

wpt-commits: c207a1408604932b4ef78f32ddc7d0fd3a10eea4
wpt-pr: 48465

UltraBlame original commit: 4e7f79848096584b8714def69cc3232c4cb011b3

--- a/testing/web-platform/tests/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups-restrict-properties.https.html
+++ b/testing/web-platform/tests/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups-restrict-properties.https.html
@@ -214,6 +214,7 @@ restrict
 -
 properties
 "
+SAME_ORIGIN
 /
 *
 opener_expectation
@@ -237,6 +238,7 @@ allow
 -
 popups
 "
+SAME_ORIGIN
 /
 *
 opener_expectation
