--- a/testing/web-platform/tests/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups.https.html
+++ b/testing/web-platform/tests/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups.https.html
@@ -203,6 +203,7 @@ unsafe
 -
 none
 "
+SAME_ORIGIN
 /
 *
 opener_expectation
@@ -228,6 +229,7 @@ allow
 -
 popups
 "
+SAME_ORIGIN
 /
 *
 opener_expectation
@@ -251,6 +253,7 @@ same
 -
 origin
 "
+SAME_ORIGIN
 /
 *
 opener_expectation
@@ -278,13 +281,42 @@ allow
 -
 popups
 "
+SAME_ORIGIN
 /
 *
 opener_expectation
 =
 *
 /
-true
+false
+)
+;
+test_noopener_opening_popup
+(
+"
+noopener
+-
+allow
+-
+popups
+"
+"
+same
+-
+origin
+-
+allow
+-
+popups
+"
+CROSS_ORIGIN
+/
+*
+opener_expectation
+=
+*
+/
+false
 )
 ;
 test_noopener_opening_popup
@@ -305,6 +337,7 @@ allow
 -
 popups
 "
+SAME_ORIGIN
 /
 *
 opener_expectation
@@ -328,6 +361,7 @@ allow
 -
 popups
 "
+SAME_ORIGIN
 /
 *
 opener_expectation
@@ -343,6 +377,19 @@ test_noopener_navigating_away
 unsafe
 -
 none
+"
+)
+;
+/
+/
+test_noopener_navigating_away
+(
+"
+noopener
+-
+allow
+-
+popups
 "
 )
 ;
