Bug 1923181 [wpt PR 48501] - [webauthn] Update signal WPTs, a=testonly
Automatic update from web-platform-tests
[webauthn] Update signal WPTs

Update PublicKeyCredential.signalCurrentUserDetails() WPTs now that we
can use `userName` and `userDisplayName` to verify changes.

Bug: 361751877
Change-Id: Id34c9fac83298e03f2b28cebbd8ba9e557616744
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5903836
Commit-Queue: Ken Buchanan <kenrbchromium.org>
Auto-Submit: Nina Satragno <nsatragnochromium.org>
Reviewed-by: Ken Buchanan <kenrbchromium.org>
Cr-Commit-Position: refs/heads/main{#1365060}

--

wpt-commits: 07001d0ca272d0b863c68fbd198756712a6e95bb
wpt-pr: 48501

UltraBlame original commit: 50bf3c9e6934d2ea2c7df54b2e0896282ffe728f

--- a/testing/web-platform/tests/webauthn/signal-current-user-details.https.html
+++ b/testing/web-platform/tests/webauthn/signal-current-user-details.https.html
@@ -414,34 +414,27 @@ authenticator
 0
 ]
 ;
-/
-/
-TODO
+assert_equals
 (
-nsatragno
+credential
+.
+userName
+"
+reimu
+"
 )
-:
-add
-assertions
-once
-https
-:
-/
-/
-github
+;
+assert_equals
+(
+credential
 .
-com
-/
-w3c
-/
-webauthn
-/
-issues
-/
-2143
-is
-resolved
-.
+userDisplayName
+"
+Reimu
+Hakurei
+"
+)
+;
 }
 authenticatorOptions
 "
@@ -521,34 +514,27 @@ authenticator
 0
 ]
 ;
-/
-/
-TODO
+assert_equals
 (
-nsatragno
+credential
+.
+userName
+"
+marisa
+"
 )
-:
-add
-assertions
-once
-https
-:
-/
-/
-github
+;
+assert_equals
+(
+credential
 .
-com
-/
-w3c
-/
-webauthn
-/
-issues
-/
-2143
-is
-resolved
-.
+userDisplayName
+"
+Marisa
+Kirisame
+"
+)
+;
 }
 authenticatorOptions
 "
