Bug 1923235 [wpt PR 48509] - [WebAudio]Re-Enable test of processing-after-resume test, a=testonly
Automatic update from web-platform-tests
[WebAudio]Re-Enable test of processing-after-resume test

The test often failed with different currentTime on audioContext and worklet.
It is due to currentTime is captured for the worklet is made during
its startup where it is always 0, meanwhile audioContext's
is captured after its startup with running state.

This fix consists in executing the test asserts after the
AudioContext has been suspended for the first time. This ensures
that the worklet's reported currentTime during its own
initialization will also match the AudioContext's currentTime.

Bug:40246707

Change-Id: I33403bdcd78918e61a462c2a0b1ec4d99f6b9562
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5906880
Reviewed-by: Michael Wilson <mjwilsonchromium.org>
Commit-Queue: Sunggook Chue <sunggchmicrosoft.com>
Reviewed-by: Gabriel Brito <gabrielbritomicrosoft.com>
Cr-Commit-Position: refs/heads/main{#1365266}

--

wpt-commits: 577cf22b9f9d6737e84e3a32a27295099600dab4
wpt-pr: 48509

UltraBlame original commit: b00daeb83f0fb68ff79b83c72c5a296eed906a0a

--- a/testing/web-platform/tests/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html
+++ b/testing/web-platform/tests/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html
@@ -260,37 +260,54 @@ async
 =
 >
 {
-const
-realtime
-=
-new
-AudioContext
+let
+construct1
+;
+async
+function
+run_test
 (
 )
-;
-await
-realtime
-.
-audioWorklet
-.
-addModule
-(
-modulePath
-)
-;
-await
-realtime
-.
-suspend
-(
-)
-;
+{
 const
 timeBeforeResume
 =
 realtime
 .
 currentTime
+;
+/
+/
+Get
+the
+currentTime
+at
+the
+same
+time
+with
+AudioContext
+.
+currentTime
+.
+const
+{
+node
+:
+node1
+}
+=
+await
+construct1
+;
+const
+constructReply1
+=
+await
+ping_for_reply
+(
+node1
+)
 ;
 /
 /
@@ -314,17 +331,7 @@ resume
 )
 call
 .
-const
-construct1
-=
-get_node_and_reply
-(
-realtime
-)
-;
-const
-resume
-=
+await
 realtime
 .
 resume
@@ -338,19 +345,6 @@ get_node_and_reply
 (
 realtime
 )
-;
-const
-{
-node
-:
-node1
-reply
-:
-constructReply1
-}
-=
-await
-construct1
 ;
 assert_equals
 (
@@ -392,9 +386,6 @@ after
 resume
 '
 )
-;
-await
-resume
 ;
 /
 /
@@ -485,6 +476,103 @@ matches
 '
 )
 ;
+}
+;
+const
+realtime
+=
+new
+AudioContext
+(
+)
+;
+await
+realtime
+.
+audioWorklet
+.
+addModule
+(
+modulePath
+)
+;
+construct1
+=
+get_node_and_reply
+(
+realtime
+)
+;
+if
+(
+realtime
+.
+state
+=
+=
+=
+'
+running
+'
+)
+{
+realtime
+.
+suspend
+(
+)
+;
+realtime
+.
+onstatechange
+=
+async
+(
+e
+)
+=
+>
+{
+if
+(
+e
+.
+target
+.
+state
+=
+=
+=
+'
+suspended
+'
+)
+{
+e
+.
+target
+.
+onstatechange
+=
+null
+;
+await
+run_test
+(
+)
+;
+}
+}
+;
+}
+else
+{
+await
+run_test
+(
+)
+;
+}
 }
 )
 ;
