--- a/testing/web-platform/tests/css/css-typed-om/stylevalue-serialization/cssUnparsedValue.html
+++ b/testing/web-platform/tests/css/css-typed-om/stylevalue-serialization/cssUnparsedValue.html
@@ -451,6 +451,101 @@ test
 =
 >
 {
+let
+fallback
+=
+new
+CSSUnparsedValue
+(
+[
+new
+CSSVariableReferenceValue
+(
+'
+-
+-
+B
+'
+)
+]
+)
+;
+let
+var_ref
+=
+new
+CSSVariableReferenceValue
+(
+'
+-
+-
+A
+'
+fallback
+)
+;
+assert_equals
+(
+new
+CSSUnparsedValue
+(
+[
+var_ref
+var_ref
+]
+)
+.
+toString
+(
+)
+'
+var
+(
+-
+-
+A
+var
+(
+-
+-
+B
+)
+)
+var
+(
+-
+-
+A
+var
+(
+-
+-
+B
+)
+)
+'
+)
+;
+}
+'
+CSSUnparsedValue
+can
+hold
+same
+object
+in
+multiple
+places
+'
+)
+;
+test
+(
+(
+)
+=
+>
+{
 assert_equals
 (
 elem
