Bug 1920733 - Adjust fuzzy annotations etc for testcases affected by disabling the forced-gdi-classic rendering pref. r=gfx-reviewers,lsalzman
Differential Revision: https://phabricator.services.mozilla.com/D225074

UltraBlame original commit: f28e910b3409392db21876fe891b5c83ae18a20e

--- a/testing/web-platform/mozilla/tests/html/rendering/non-replaced-elements/form-controls/input-number-size.html
+++ b/testing/web-platform/mozilla/tests/html/rendering/non-replaced-elements/form-controls/input-number-size.html
@@ -207,10 +207,24 @@ if
 shouldBeEqual
 )
 {
-assert_equals
+const
+tolerance
+=
+0
+.
+0001
+;
+assert_less_than
+(
+Math
+.
+abs
 (
 w1
+-
 w2
+)
+tolerance
 {
 number
 }
