--- a/testing/web-platform/tests/html/rendering/widgets/textarea-cols-rows.html
+++ b/testing/web-platform/tests/html/rendering/widgets/textarea-cols-rows.html
@@ -585,7 +585,9 @@ assert_equals
 computed
 .
 offsetWidth
-parseInt
+Math
+.
+round
 (
 computedWidth
 .
@@ -616,7 +618,9 @@ assert_equals
 computed
 .
 offsetHeight
-parseInt
+Math
+.
+round
 (
 computedHeight
 .
