--- a/testing/web-platform/tests/input-events/input-events-spin-button-click-on-number-input.html
+++ b/testing/web-platform/tests/input-events/input-events-spin-button-click-on-number-input.html
@@ -274,6 +274,10 @@ getBoundingClientRect
 const
 x
 =
+Math
+.
+round
+(
 rect
 .
 x
@@ -283,18 +287,19 @@ rect
 width
 -
 10
+)
 ;
 const
 y
 =
-rect
-.
-y
-+
 Math
 .
 round
 (
+rect
+.
+y
++
 rect
 .
 height
