--- a/widget/tests/test_textScaleFactor_system_font.html
+++ b/widget/tests/test_textScaleFactor_system_font.html
@@ -1009,12 +1009,65 @@ id
 1640441
 #
 c28
+/
+/
+/
+/
+Increased
+tolerance
+in
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1920733
+/
+/
+as
+the
+change
+to
+rendering
+mode
+seems
+to
+have
+perturbed
+results
+a
+bit
+though
+/
+/
+it
+'
+s
+still
+"
+basically
+the
+same
+"
+.
 const
 absTolerance
 =
-1
-/
-65536
+0
+.
+05
+;
 fuzzyCompareLength
 (
 menuRect2
