Bug 1923336 - [devtools] Fix DAMP DOM elements and Node List logging. r=devtools-reviewers,perftest-reviewers,jdescottes,sparky
When this code runs, the DOM elements aren't created yet.

Differential Revision: https://phabricator.services.mozilla.com/D225076

UltraBlame original commit: b357915c617a21167a8f979c6e6b3ee31cd5e6a9

--- a/testing/talos/talos/tests/devtools/addon/content/pages/custom/console/bulklog.html
+++ b/testing/talos/talos/tests/devtools/addon/content/pages/custom/console/bulklog.html
@@ -265,13 +265,23 @@ return
 value
 ;
 }
+get
 node
-:
+(
+)
+{
+return
 document
 .
 body
+;
+}
+get
 nodelist
-:
+(
+)
+{
+return
 document
 .
 querySelectorAll
@@ -280,6 +290,8 @@ querySelectorAll
 *
 "
 )
+;
+}
 promise
 :
 Promise
