Backed out 2 changesets (bug 1920733) for causing windows reftests failures in select-4-ref.html. CLOSED TREE
Backed out changeset f28e910b3409 (bug 1920733)
Backed out changeset 612816a6ef09 (bug 1920733)

UltraBlame original commit: b8170b32208ce0028dff918d744882499e489422

--- a/testing/web-platform/mozilla/tests/html/rendering/non-replaced-elements/form-controls/input-number-size.html
+++ b/testing/web-platform/mozilla/tests/html/rendering/non-replaced-elements/form-controls/input-number-size.html
@@ -207,24 +207,10 @@ if
 shouldBeEqual
 )
 {
-const
-tolerance
-=
-0
-.
-0001
-;
-assert_less_than
-(
-Math
-.
-abs
+assert_equals
 (
 w1
--
 w2
-)
-tolerance
 {
 number
 }
