--- a/testing/web-platform/tests/html/rendering/widgets/textarea-cols-rows.html
+++ b/testing/web-platform/tests/html/rendering/widgets/textarea-cols-rows.html
@@ -585,9 +585,7 @@ assert_equals
 computed
 .
 offsetWidth
-Math
-.
-round
+parseInt
 (
 computedWidth
 .
@@ -618,9 +616,7 @@ assert_equals
 computed
 .
 offsetHeight
-Math
-.
-round
+parseInt
 (
 computedHeight
 .
