Bug 1905851 - Enable `dom.block_multiple_popups` by default for tests; r=smaug
Some tests only set `dom.disable_open_during_load` to `true` and expect the
popup blocker to be enabled, e.g. https://searchfox.org/mozilla-central/rev/b368ed8b48c0ea8ed2f1948e4776a6fbb5976dff/browser/base/content/test/popups/browser_popup_blocker.js#21,
but it might not have complete popup blocker behavior as we also check `dom.block_multiple_popups`
in https://searchfox.org/mozilla-central/rev/b368ed8b48c0ea8ed2f1948e4776a6fbb5976dff/docshell/base/BrowsingContext.cpp#2246.

I think it would be nice if we could simplify this by having `dom.block_multiple_popups`
enabled on test profile by default as well, so we could use only `dom.disable_open_during_load`
to control whether popup blocker is enabled and also test the popup blocker properly.

Differential Revision: https://phabricator.services.mozilla.com/D216007

UltraBlame original commit: e299f0dda29b3a9ed0a0b2e56c086f0362c5147b

--- a/dom/base/test/useractivation/test_popup_blocker_mouse_event.html
+++ b/dom/base/test/useractivation/test_popup_blocker_mouse_event.html
@@ -364,47 +364,6 @@ function
 (
 )
 {
-if
-(
-experimental
-)
-{
-/
-/
-This
-is
-a
-rather
-fragile
-test
-when
-experimental
-pref
-isn
-'
-t
-enabled
-.
-/
-/
-Use
-default
-prefs
-in
-experimental
-case
-.
-SpecialPowers
-.
-wrap
-(
-document
-)
-.
-clearUserGestureActivation
-(
-)
-;
 await
 SpecialPowers
 .
@@ -414,14 +373,12 @@ pushPrefEnv
 set
 :
 [
-[
-"
-dom
-.
-block_multiple_popups
-"
-true
-]
+/
+/
+Enable
+the
+popup
+blocker
 [
 "
 dom
@@ -432,90 +389,6 @@ true
 ]
 ]
 }
-)
-;
-}
-const
-DENY_ACTION
-=
-SpecialPowers
-.
-Ci
-.
-nsIPermissionManager
-.
-DENY_ACTION
-;
-let
-xorigin
-=
-SimpleTest
-.
-getTestFileURL
-(
-"
-"
-)
-.
-replace
-(
-location
-.
-hostname
-'
-mochi
-.
-xorigin
--
-test
-'
-)
-;
-await
-SpecialPowers
-.
-pushPermissions
-(
-[
-{
-'
-type
-'
-:
-'
-popup
-'
-'
-allow
-'
-:
-DENY_ACTION
-'
-context
-'
-:
-document
-}
-{
-'
-type
-'
-:
-'
-popup
-'
-'
-allow
-'
-:
-DENY_ACTION
-'
-context
-'
-:
-xorigin
-}
-]
 )
 ;
 await
@@ -610,11 +483,7 @@ LEFT_BUTTON
 "
 mouseup
 "
-experimental
-?
 checkBlockOpenPopup
-:
-checkAllowOpenPopup
 )
 ;
 /
@@ -657,11 +526,7 @@ MIDDLE_BUTTON
 "
 mouseup
 "
-experimental
-?
 checkBlockOpenPopup
-:
-checkAllowOpenPopup
 )
 ;
 /
