--- a/dom/tests/mochitest/bugs/test_bug260264.html
+++ b/dom/tests/mochitest/bugs/test_bug260264.html
@@ -481,6 +481,72 @@ disable_open_during_load
 "
 true
 ]
+/
+/
+XXXedgar
+:
+Now
+dom
+.
+block_multiple_popups
+is
+also
+true
+by
+default
+in
+testng
+/
+/
+profile
+.
+However
+this
+test
+primarily
+focuses
+on
+behavior
+when
+the
+/
+/
+preference
+is
+turned
+off
+.
+If
+dom
+.
+block_multiple_popups
+is
+removed
+in
+the
+/
+/
+future
+at
+some
+point
+this
+test
+will
+need
+to
+be
+updated
+accordingly
+.
+[
+"
+dom
+.
+block_multiple_popups
+"
+false
+]
 [
 "
 dom
@@ -608,10 +674,16 @@ is
 true
 by
 default
-false
 in
 testing
 profile
+but
+we
+/
+/
+modify
+it
+above
 .
 await
 SpecialPowers
