--- a/dom/tests/mochitest/bugs/test_bug260264_nested.html
+++ b/dom/tests/mochitest/bugs/test_bug260264_nested.html
@@ -7,6 +7,30 @@ HTML
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+260264
+-
+-
+>
+<
 head
 >
 <
@@ -619,7 +643,7 @@ aNext
 }
 report
 :
-should_not_have_blocked
+should_have_blocked
 }
 {
 event
@@ -779,7 +803,7 @@ aNext
 }
 report
 :
-should_not_have_blocked
+should_have_blocked
 }
 {
 event
