--- a/testing/web-platform/tests/css/css-fonts/font-size-adjust-010.html
+++ b/testing/web-platform/tests/css/css-fonts/font-size-adjust-010.html
@@ -230,6 +230,29 @@ html
 "
 >
 <
+meta
+name
+=
+"
+fuzzy
+"
+content
+=
+"
+maxDifference
+=
+0
+-
+130
+;
+totalPixels
+=
+0
+-
+350
+"
+>
+<
 style
 >
 font
