Bug 1923372 [wpt PR 48521] - Add WPT for CSP exemption of speculation rules via the SR header, a=testonly
Automatic update from web-platform-tests
Add WPT for CSP exemption of speculation rules via the SR header

Bug: 371595744
Change-Id: I34a7a01374c2c050749085933ab1673637af718e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5911990
Commit-Queue: Liviu Tinta <liviutintachromium.org>
Reviewed-by: Weizhong Xia <weizhonggoogle.com>
Reviewed-by: Kevin McNee <mcneechromium.org>
Cr-Commit-Position: refs/heads/main{#1365726}

--

wpt-commits: f18c40c851bf0f3c4441f7f5110b1af9e871bad6
wpt-pr: 48521

UltraBlame original commit: a1fb8d479c7210aeb1d50096054e97b970e69d38

--- a/testing/web-platform/tests/speculation-rules/prefetch/out-of-document-rule-set.https.html
+++ b/testing/web-platform/tests/speculation-rules/prefetch/out-of-document-rule-set.https.html
@@ -358,6 +358,22 @@ InvalidMimeType
 "
 >
 <
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+include
+=
+CSPExemption
+"
+>
+<
 script
 >
 setup
@@ -596,6 +612,22 @@ set
 useValidMimeTypeForSpeculationRulesSet
 :
 true
+/
+/
+Whether
+to
+use
+a
+strict
+CSP
+for
+the
+main
+page
+.
+strictCSP
+:
+false
 .
 .
 .
@@ -860,6 +892,46 @@ json
 \
 \
 )
+)
+;
+}
+if
+(
+options
+.
+strictCSP
+)
+{
+speculation_rules_header
+=
+speculation_rules_header
++
+|
+header
+(
+Content
+-
+Security
+-
+Policy
+script
+-
+src
+'
+strict
+-
+dynamic
+'
+'
+nonce
+-
+abc
+'
+'
+unsafe
+-
+eval
+'
 )
 ;
 }
@@ -1618,6 +1690,50 @@ with
 invalid
 MIME
 type
+.
+"
+)
+;
+subsetTestByKey
+(
+'
+CSPExemption
+'
+promise_test
+async
+t
+=
+>
+{
+return
+runSpeculationRulesFetchTest
+(
+t
+{
+shouldPrefetch
+:
+true
+strictCSP
+:
+true
+}
+)
+;
+}
+"
+It
+should
+accept
+the
+speculation
+rules
+when
+the
+main
+page
+has
+strict
+CSP
 .
 "
 )
