--- a/testing/web-platform/tests/speculation-rules/prefetch/resources/executor.sub.html
+++ b/testing/web-platform/tests/speculation-rules/prefetch/resources/executor.sub.html
@@ -17,6 +17,11 @@ dispatcher
 .
 js
 "
+nonce
+=
+"
+abc
+"
 >
 <
 /
@@ -33,6 +38,11 @@ sub
 .
 js
 "
+nonce
+=
+"
+abc
+"
 >
 <
 /
@@ -40,6 +50,11 @@ script
 >
 <
 script
+nonce
+=
+"
+abc
+"
 >
 window
 .
