--- a/testing/web-platform/tests/html/semantics/permission-element/bounded-sizes-reftest.tentative.html
+++ b/testing/web-platform/tests/html/semantics/permission-element/bounded-sizes-reftest.tentative.html
@@ -262,6 +262,10 @@ height
 :
 100px
 ;
+border
+:
+0px
+;
 /
 *
 These
@@ -335,6 +339,10 @@ height
 :
 100px
 ;
+border
+:
+0px
+;
 /
 *
 These
@@ -403,6 +411,10 @@ auto
 height
 :
 auto
+;
+border
+:
+0px
 ;
 /
 *
