--- a/testing/web-platform/tests/html/semantics/permission-element/bounded-sizes.tentative.html
+++ b/testing/web-platform/tests/html/semantics/permission-element/bounded-sizes.tentative.html
@@ -189,6 +189,10 @@ height
 :
 auto
 ;
+border
+:
+0px
+;
 min
 -
 height
@@ -274,6 +278,10 @@ height
 :
 auto
 ;
+border
+:
+0px
+;
 min
 -
 height
@@ -327,6 +335,10 @@ auto
 height
 :
 auto
+;
+border
+:
+0px
 ;
 min
 -
