Bug 1923687 [wpt PR 48545] - [FedCM] Rename mode button -> active, widget -> passive, a=testonly
Automatic update from web-platform-tests
[FedCM] Rename mode button -> active, widget -> passive

This patch renames the mode values in the code base except for 4 places:
1. feature/flag
2. metrics
3. file name
4. webdriver

GitHub repo: https://github.com/w3c-fedid/active-mode

Bug: 370696611
Change-Id: I13a08a8e2fe8201afd8daacbd334b66223d38bc7
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5905546
Reviewed-by: Christian Biesinger <cbiesingerchromium.org>
Commit-Queue: Yi Gu <yiguchromium.org>
Reviewed-by: Joe Mason <joenotcharlesgoogle.com>
Reviewed-by: Dave Tapuska <dtapuskachromium.org>
Cr-Commit-Position: refs/heads/main{#1366300}

--

wpt-commits: 89a40d93ea6e5d468d23594879ed5603e9fbbfa5
wpt-pr: 48545

UltraBlame original commit: 2da37ce90871957cfa18a55562dee6934200b4a0

--- a/testing/web-platform/tests/fedcm/fedcm-button-and-other-account/fedcm-button-mode-auto-selected-flag.tentative.https.html
+++ b/testing/web-platform/tests/fedcm/fedcm-button-and-other-account/fedcm-button-mode-auto-selected-flag.tentative.https.html
@@ -10,7 +10,7 @@ Federated
 Credential
 Management
 API
-Button
+Active
 Mode
 auto
 selected
@@ -171,7 +171,7 @@ identity
 mode
 =
 "
-button
+active
 "
 ;
 return
@@ -283,7 +283,7 @@ can
 be
 true
 in
-button
+active
 mode
 .
 "
