--- a/testing/web-platform/tests/fedcm/fedcm-button-and-other-account/fedcm-button-mode-basics.tentative.https.html
+++ b/testing/web-platform/tests/fedcm/fedcm-button-and-other-account/fedcm-button-mode-basics.tentative.https.html
@@ -10,7 +10,7 @@ Federated
 Credential
 Management
 API
-Button
+Active
 Mode
 basic
 tests
@@ -164,7 +164,7 @@ identity
 mode
 =
 "
-button
+active
 "
 ;
 await
@@ -201,7 +201,7 @@ result
 Test
 that
 the
-button
+active
 mode
 without
 user
@@ -238,7 +238,7 @@ identity
 mode
 =
 "
-button
+active
 "
 ;
 return
@@ -274,7 +274,7 @@ token
 "
 mode
 =
-button
+active
 "
 )
 ;
@@ -286,7 +286,7 @@ button
 Test
 that
 the
-button
+active
 mode
 succeeds
 with
@@ -322,7 +322,7 @@ identity
 mode
 =
 "
-button
+active
 "
 ;
 test_options
@@ -387,7 +387,7 @@ is
 not
 supported
 in
-button
+active
 mode
 .
 "
