--- a/testing/web-platform/tests/fedcm/fedcm-button-and-other-account/fedcm-button-mode-priority.tentative.https.html
+++ b/testing/web-platform/tests/fedcm/fedcm-button-and-other-account/fedcm-button-mode-priority.tentative.https.html
@@ -10,7 +10,7 @@ Federated
 Credential
 Management
 API
-Button
+Active
 Mode
 priority
 tests
@@ -150,14 +150,14 @@ t
 >
 {
 let
-widget_test_options
+passive_test_options
 =
 request_options_with_mediation_required
 (
 )
 ;
 let
-button_test_options
+active_test_options
 =
 request_options_with_mediation_required
 (
@@ -168,14 +168,14 @@ json
 "
 )
 ;
-button_test_options
+active_test_options
 .
 identity
 .
 mode
 =
 "
-button
+active
 "
 ;
 return
@@ -200,7 +200,7 @@ await
 fedcm_get_and_select_first_account
 (
 t
-button_test_options
+active_test_options
 )
 ;
 assert_equals
@@ -211,7 +211,7 @@ token
 "
 mode
 =
-button
+active
 "
 )
 ;
@@ -222,7 +222,7 @@ await
 fedcm_get_and_select_first_account
 (
 t
-widget_test_options
+passive_test_options
 )
 ;
 assert_equals
@@ -243,13 +243,13 @@ token
 Test
 that
 the
-widget
+passive
 mode
 can
 succeed
 after
 the
-button
+active
 mode
 .
 "
@@ -263,7 +263,7 @@ t
 >
 {
 let
-widget_test_options
+passive_test_options
 =
 request_options_with_mediation_required
 (
@@ -275,7 +275,7 @@ json
 )
 ;
 let
-button_test_options
+active_test_options
 =
 request_options_with_mediation_required
 (
@@ -286,14 +286,14 @@ json
 "
 )
 ;
-button_test_options
+active_test_options
 .
 identity
 .
 mode
 =
 "
-button
+active
 "
 ;
 let
@@ -305,7 +305,7 @@ credentials
 .
 get
 (
-widget_test_options
+passive_test_options
 )
 ;
 let
@@ -342,7 +342,7 @@ await
 fedcm_get_and_select_first_account
 (
 t
-button_test_options
+active_test_options
 )
 ;
 assert_equals
@@ -353,7 +353,7 @@ token
 "
 mode
 =
-button
+active
 "
 )
 ;
@@ -368,11 +368,11 @@ rej
 Test
 that
 the
-button
+active
 mode
 can
 replace
-widget
+passive
 mode
 .
 "
@@ -386,7 +386,7 @@ t
 >
 {
 let
-button_test_options
+active_test_options
 =
 request_options_with_mediation_required
 (
@@ -397,14 +397,14 @@ json
 "
 )
 ;
-button_test_options
+active_test_options
 .
 identity
 .
 mode
 =
 "
-button
+active
 "
 ;
 return
@@ -428,7 +428,7 @@ first_cred
 fedcm_get_and_select_first_account
 (
 t
-button_test_options
+active_test_options
 )
 ;
 let
@@ -440,7 +440,7 @@ credentials
 .
 get
 (
-button_test_options
+active_test_options
 )
 ;
 let
@@ -469,7 +469,7 @@ token
 "
 mode
 =
-button
+active
 "
 )
 ;
@@ -484,11 +484,11 @@ rej
 Test
 that
 the
-button
+active
 mode
 cannot
 replace
-button
+active
 mode
 .
 "
@@ -502,7 +502,7 @@ t
 >
 {
 let
-widget_test_options
+passive_test_options
 =
 request_options_with_mediation_required
 (
@@ -514,7 +514,7 @@ json
 )
 ;
 let
-button_test_options
+active_test_options
 =
 request_options_with_mediation_required
 (
@@ -525,14 +525,14 @@ json
 "
 )
 ;
-button_test_options
+active_test_options
 .
 identity
 .
 mode
 =
 "
-button
+active
 "
 ;
 return
@@ -556,7 +556,7 @@ first_cred
 fedcm_get_and_select_first_account
 (
 t
-button_test_options
+active_test_options
 )
 ;
 let
@@ -568,7 +568,7 @@ credentials
 .
 get
 (
-widget_test_options
+passive_test_options
 )
 ;
 let
@@ -597,7 +597,7 @@ token
 "
 mode
 =
-button
+active
 "
 )
 ;
@@ -612,11 +612,11 @@ rej
 Test
 that
 the
-widget
+passive
 mode
 cannot
 replace
-button
+active
 mode
 .
 "
