--- a/testing/web-platform/tests/fedcm/fedcm-button-and-other-account/fedcm-use-other-account-button-flow.tentative.https.html
+++ b/testing/web-platform/tests/fedcm/fedcm-button-and-other-account/fedcm-use-other-account-button-flow.tentative.https.html
@@ -221,7 +221,7 @@ identity
 mode
 =
 "
-button
+active
 "
 ;
 await
@@ -410,7 +410,7 @@ Use
 Other
 Account
 "
-button
+active
 works
 correctly
 .
@@ -451,7 +451,7 @@ identity
 mode
 =
 "
-button
+active
 "
 ;
 await
@@ -613,7 +613,7 @@ Use
 Other
 Account
 "
-button
+active
 works
 correctly
 when
