--- a/testing/web-platform/tests/css/css-anchor-position/anchor-size-001.html
+++ b/testing/web-platform/tests/css/css-anchor-position/anchor-size-001.html
@@ -661,6 +661,320 @@ div
 !
 -
 -
+anchor
+-
+size
+(
+)
+in
+insets
+-
+-
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+left
+:
+anchor
+-
+size
+(
+-
+-
+a1
+width
+)
+"
+data
+-
+offset
+-
+x
+=
+5
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+top
+:
+anchor
+-
+size
+(
+-
+-
+a1
+height
+)
+"
+data
+-
+offset
+-
+y
+=
+7
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+left
+:
+anchor
+-
+size
+(
+-
+-
+a1
+height
+)
+"
+data
+-
+offset
+-
+x
+=
+7
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+top
+:
+anchor
+-
+size
+(
+-
+-
+a1
+width
+"
+data
+-
+offset
+-
+y
+=
+5
+>
+<
+/
+div
+>
+<
+!
+-
+-
+anchor
+-
+size
+(
+)
+in
+margins
+-
+-
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+margin
+-
+left
+:
+anchor
+-
+size
+(
+-
+-
+a1
+width
+)
+"
+data
+-
+expected
+-
+margin
+-
+left
+=
+5
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+margin
+-
+top
+:
+anchor
+-
+size
+(
+-
+-
+a1
+height
+)
+"
+data
+-
+expected
+-
+margin
+-
+top
+=
+7
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+margin
+-
+right
+:
+anchor
+-
+size
+(
+-
+-
+a1
+height
+)
+"
+data
+-
+expected
+-
+margin
+-
+right
+=
+7
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+margin
+-
+bottom
+:
+anchor
+-
+size
+(
+-
+-
+a1
+width
+"
+data
+-
+expected
+-
+margin
+-
+bottom
+=
+5
+>
+<
+/
+div
+>
+<
+!
+-
+-
 Implicit
 <
 anchor
@@ -729,6 +1043,220 @@ data
 expected
 -
 height
+=
+7
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+left
+:
+anchor
+-
+size
+(
+-
+-
+a1
+)
+"
+data
+-
+offset
+-
+x
+=
+5
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+top
+:
+anchor
+-
+size
+(
+-
+-
+a1
+)
+"
+data
+-
+offset
+-
+y
+=
+7
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+margin
+-
+left
+:
+anchor
+-
+size
+(
+-
+-
+a1
+)
+"
+data
+-
+expected
+-
+margin
+-
+left
+=
+5
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+margin
+-
+right
+:
+anchor
+-
+size
+(
+-
+-
+a1
+)
+"
+data
+-
+expected
+-
+margin
+-
+right
+=
+5
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+margin
+-
+top
+:
+anchor
+-
+size
+(
+-
+-
+a1
+)
+"
+data
+-
+expected
+-
+margin
+-
+top
+=
+7
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+"
+style
+=
+"
+margin
+-
+bottom
+:
+anchor
+-
+size
+(
+-
+-
+a1
+)
+"
+data
+-
+expected
+-
+margin
+-
+bottom
 =
 7
 >
