--- a/testing/web-platform/tests/webauthn/getcredential-nested-frame.https.html
+++ b/testing/web-platform/tests/webauthn/getcredential-nested-frame.https.html
@@ -891,6 +891,168 @@ succeed
 "
 )
 ;
+promise_test
+(
+async
+t
+=
+>
+{
+let
+frame
+=
+document
+.
+createElement
+(
+"
+iframe
+"
+)
+;
+const
+eventWatcher
+=
+new
+EventWatcher
+(
+t
+window
+"
+message
+"
+)
+;
+frame
+.
+src
+=
+"
+resources
+/
+webauthn
+-
+subframe
+.
+sub
+.
+html
+"
+;
+document
+.
+body
+.
+append
+(
+frame
+)
+;
+assert_equals
+(
+(
+await
+eventWatcher
+.
+wait_for
+(
+"
+message
+"
+)
+)
+.
+data
+.
+type
+"
+subframe
+-
+loaded
+"
+)
+;
+frame
+.
+contentWindow
+.
+postMessage
+(
+{
+type
+:
+"
+get
+-
+credential
+"
+addUserActivation
+:
+false
+}
+)
+;
+const
+{
+data
+}
+=
+await
+eventWatcher
+.
+wait_for
+(
+"
+message
+"
+)
+;
+assert_equals
+(
+data
+.
+result
+"
+success
+"
+"
+Error
+:
+"
++
+data
+.
+error
+)
+;
+}
+"
+navigator
+.
+credentials
+.
+get
+(
+{
+publicKey
+}
+)
+in
+a
+same
+-
+origin
+frame
+should
+succeed
+without
+requiring
+user
+activation
+.
+"
+)
+;
 }
 {
 protocol
