--- a/testing/web-platform/tests/webauthn/resources/webauthn-subframe.sub.html
+++ b/testing/web-platform/tests/webauthn/resources/webauthn-subframe.sub.html
@@ -174,6 +174,104 @@ e
 ;
 }
 }
+async
+function
+getCredentialAndReportResult
+(
+addUserActivation
+)
+{
+if
+(
+addUserActivation
+)
+{
+await
+test_driver
+.
+bless
+(
+"
+create
+credential
+"
+)
+;
+}
+try
+{
+await
+navigator
+.
+credentials
+.
+get
+(
+{
+publicKey
+:
+{
+challenge
+:
+new
+Uint8Array
+(
+)
+allowCredentials
+:
+[
+{
+id
+:
+(
+await
+createCredential
+(
+)
+)
+.
+rawId
+type
+:
+"
+public
+-
+key
+"
+userVerification
+:
+"
+discouraged
+"
+}
+]
+}
+}
+)
+;
+reportResult
+(
+"
+success
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+reportResult
+(
+"
+failure
+"
+e
+)
+;
+}
+}
 window
 .
 addEventListener
@@ -202,6 +300,34 @@ credential
 )
 {
 createCredentialAndReportResult
+(
+e
+.
+data
+.
+addUserActivation
+)
+;
+return
+;
+}
+if
+(
+e
+.
+data
+.
+type
+=
+=
+"
+get
+-
+credential
+"
+)
+{
+getCredentialAndReportResult
 (
 e
 .
