Bug 1923521 [wpt PR 48529] - Update the sampling option for imageFilterQuality set to Medium or High, a=testonly
Automatic update from web-platform-tests
Update the sampling option for imageFilterQuality set to Medium or High

Currently, we are using bi-cubic sampling method, CatmullRom(), when
filter quality is set to High; and using linear sampling when the
quality is set to medium.

However, the bicubic sampling under perform than the linear sampling
when the image is scaled down: https://fiddle.skia.org/c/9822e1bbf3e6e69498fe9a3e86ef49f3 (bicubic)
and https://fiddle.skia.org/c/2b9f1057f9437710a993844fc1b015e2 (linear).

In this cl, I updated the sampling method respected to the image scale,
i.e., uses Mitchell for scaling up and linear for scaling down for both
medium and high quality.

I choose Mitchell over CatmullRom because Mitchell produces less Ringing
around color change.

Bug: 40044062
Change-Id: Iae6df006a5153b0c31959d3767a9e0f782b7d5a5
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5806239
Commit-Queue: Yi Xu <yiyixchromium.org>
Reviewed-by: Florin Malita <fmalitachromium.org>
Reviewed-by: Fernando Serboncini <fserbchromium.org>
Cr-Commit-Position: refs/heads/main{#1366572}

--

wpt-commits: 862d21cede6fcbc851b87245157d4a502c5f3243
wpt-pr: 48529

UltraBlame original commit: 47cf4799bfc8a6673672c64df8d2cd1bea1129d0

--- a/testing/web-platform/tests/css/css-backgrounds/border-image-repeat-002.htm
+++ b/testing/web-platform/tests/css/css-backgrounds/border-image-repeat-002.htm
@@ -189,6 +189,29 @@ meta
 name
 =
 "
+fuzzy
+"
+content
+=
+"
+maxDifference
+=
+0
+-
+20
+;
+totalPixels
+=
+0
+-
+2160
+"
+>
+<
+meta
+name
+=
+"
 flags
 "
 content
