--- a/testing/web-platform/tests/html/canvas/element/manual/imagebitmap/canvas-createImageBitmap-resize.html
+++ b/testing/web-platform/tests/html/canvas/element/manual/imagebitmap/canvas-createImageBitmap-resize.html
@@ -950,8 +950,8 @@ too
 expensive
 compareBitmaps
 (
-noCropHigh
 noCropMedium
+noCropPixelated
 )
 ;
 compareBitmaps
@@ -962,8 +962,8 @@ noCropPixelated
 ;
 compareBitmaps
 (
-cropHigh
 cropMedium
+noCropPixelated
 )
 ;
 compareBitmaps
