--- a/testing/web-platform/tests/scroll-animations/scroll-timelines/current-time-writing-modes.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-timelines/current-time-writing-modes.html
@@ -488,6 +488,25 @@ correctly
 '
 )
 ;
+for
+(
+const
+writingMode
+of
+[
+'
+vertical
+-
+rl
+'
+'
+sideways
+-
+rl
+'
+]
+)
+{
 promise_test
 (
 async
@@ -508,11 +527,7 @@ writing
 -
 mode
 '
-'
-vertical
--
-rl
-'
+writingMode
 ]
 ]
 )
@@ -648,7 +663,7 @@ right
 hand
 side
 for
-vertical
+*
 -
 rl
 .
@@ -707,7 +722,7 @@ timeline
 /
 /
 For
-vertical
+*
 -
 rl
 the
@@ -864,20 +879,19 @@ timeline
 )
 ;
 }
-'
 currentTime
 handles
 writing
 -
 mode
 :
-vertical
--
-rl
+{
+writingMode
+}
 correctly
-'
 )
 ;
+}
 promise_test
 (
 async
@@ -1225,6 +1239,349 @@ writing
 mode
 :
 vertical
+-
+lr
+correctly
+'
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+scrollerOverrides
+=
+new
+Map
+(
+[
+[
+'
+writing
+-
+mode
+'
+'
+sideways
+-
+lr
+'
+]
+]
+)
+;
+const
+scroller
+=
+setupScrollTimelineTest
+(
+scrollerOverrides
+)
+;
+const
+verticalScrollRange
+=
+scroller
+.
+scrollHeight
+-
+scroller
+.
+clientHeight
+;
+const
+horizontalScrollRange
+=
+scroller
+.
+scrollWidth
+-
+scroller
+.
+clientWidth
+;
+const
+blockScrollTimeline
+=
+new
+ScrollTimeline
+(
+{
+source
+:
+scroller
+axis
+:
+'
+block
+'
+}
+)
+;
+const
+inlineScrollTimeline
+=
+new
+ScrollTimeline
+(
+{
+source
+:
+scroller
+axis
+:
+'
+inline
+'
+}
+)
+;
+const
+horizontalScrollTimeline
+=
+new
+ScrollTimeline
+(
+{
+source
+:
+scroller
+axis
+:
+'
+x
+'
+}
+)
+;
+const
+verticalScrollTimeline
+=
+new
+ScrollTimeline
+(
+{
+source
+:
+scroller
+axis
+:
+'
+y
+'
+}
+)
+;
+/
+/
+Unscrolled
+all
+timelines
+should
+read
+a
+current
+time
+of
+0
+.
+assert_percents_equal
+(
+blockScrollTimeline
+.
+currentTime
+0
+'
+Unscrolled
+block
+timeline
+'
+)
+;
+assert_percents_equal
+(
+inlineScrollTimeline
+.
+currentTime
+0
+'
+Unscrolled
+inline
+timeline
+'
+)
+;
+assert_percents_equal
+(
+horizontalScrollTimeline
+.
+currentTime
+0
+'
+Unscrolled
+horizontal
+timeline
+'
+)
+;
+assert_percents_equal
+(
+verticalScrollTimeline
+.
+currentTime
+0
+'
+Unscrolled
+vertical
+timeline
+'
+)
+;
+/
+/
+For
+sideways
+-
+lr
+the
+Y
+-
+axis
+starts
+on
+the
+end
+side
+and
+is
+the
+inline
+axis
+.
+/
+/
+The
+X
+-
+axis
+is
+normal
+but
+is
+the
+block
+axis
+.
+scroller
+.
+scrollTop
+=
+-
+0
+.
+8
+*
+verticalScrollRange
+;
+scroller
+.
+scrollLeft
+=
+0
+.
+2
+*
+horizontalScrollRange
+;
+/
+/
+Wait
+for
+new
+animation
+frame
+which
+allows
+the
+timeline
+to
+compute
+new
+/
+/
+current
+time
+.
+await
+waitForNextFrame
+(
+)
+;
+assert_percents_equal
+(
+blockScrollTimeline
+.
+currentTime
+20
+'
+Scrolled
+block
+timeline
+'
+)
+;
+assert_percents_equal
+(
+inlineScrollTimeline
+.
+currentTime
+80
+'
+Scrolled
+inline
+timeline
+'
+)
+;
+assert_percents_equal
+(
+horizontalScrollTimeline
+.
+currentTime
+20
+'
+Scrolled
+horizontal
+timeline
+'
+)
+;
+assert_percents_equal
+(
+verticalScrollTimeline
+.
+currentTime
+80
+'
+Scrolled
+vertical
+timeline
+'
+)
+;
+}
+'
+currentTime
+handles
+writing
+-
+mode
+:
+sideways
 -
 lr
 correctly
