Bug 1923970 [wpt PR 48569] - Account for spacing around `mo` in WPT test width-height-001.html, a=testonly
Automatic update from web-platform-tests
Account for spacing around `mo` in WPT test width-height-001.html

For `mo` elements, the preferred width of a shrink wrapper around the
operator includes the spacing around it.

This change introduces a special case for `mo` to account for this.

Bug: 370553386
Change-Id: Ie220443b57bb5ab63fd996acf9ec760a02ca612a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5924353
Reviewed-by: Ian Kilpatrick <ikilpatrickchromium.org>
Commit-Queue: Ian Kilpatrick <ikilpatrickchromium.org>
Reviewed-by: Frédéric Wang <fwangigalia.com>
Cr-Commit-Position: refs/heads/main{#1367094}

--

wpt-commits: 489e5375b841dca41b93b872e65a7fa9a7ce936b
wpt-pr: 48569

UltraBlame original commit: 49ecf5ae8f346e421ccb6639138aefee8d2a70f4

--- a/testing/web-platform/tests/mathml/relations/css-styling/width-height-001.html
+++ b/testing/web-platform/tests/mathml/relations/css-styling/width-height-001.html
@@ -843,6 +843,87 @@ style
 )
 ;
 let
+refPreferredWidth
+=
+300
+;
+/
+/
+In
+the
+case
+of
+mo
+spacing
+is
+added
+around
+the
+element
+so
+that
+it
+is
+included
+/
+/
+in
+the
+preferred
+width
+calculation
+which
+should
+be
+the
+sum
+of
+lspace
+rspace
+and
+width
+.
+if
+(
+tag
+=
+=
+=
+"
+mo
+"
+)
+{
+element
+.
+setAttribute
+(
+"
+lspace
+"
+"
+50px
+"
+)
+;
+element
+.
+setAttribute
+(
+"
+rspace
+"
+"
+30px
+"
+)
+;
+refPreferredWidth
+=
+380
+;
+}
+let
 box
 =
 shrinkWrapDiv
@@ -856,7 +937,7 @@ assert_approx_equals
 box
 .
 width
-300
+refPreferredWidth
 epsilon
 )
 ;
