Bug 1921008: part 2) Add assertions to <trusted-types-navigation.html>. r=tschuster
Before, the sub-tests passed without any assertions, hampering checking
whether the tests were indeed correct.

Differential Revision: https://phabricator.services.mozilla.com/D223594

UltraBlame original commit: 81dc54226b76145cdd5099b7725ec5174128c4dc

--- a/testing/web-platform/tests/trusted-types/trusted-types-navigation.html
+++ b/testing/web-platform/tests/trusted-types/trusted-types-navigation.html
@@ -105,6 +105,10 @@ filter
 e
 =
 >
+{
+const
+result
+=
 (
 (
 e
@@ -158,6 +162,30 @@ sample
 )
 )
 ;
+if
+(
+result
+)
+{
+assert_true
+(
+true
+"
+Expected
+violation
+as
+message
+:
+"
++
+sample
+)
+;
+}
+return
+result
+;
+}
 return
 new
 expectMessage
@@ -178,6 +206,10 @@ filter
 e
 =
 >
+{
+const
+result
+=
 (
 e
 .
@@ -209,6 +241,30 @@ uri
 )
 )
 ;
+if
+(
+result
+)
+{
+assert_true
+(
+true
+"
+Expected
+loaded
+as
+message
+:
+"
++
+uri
+)
+;
+}
+return
+result
+;
+}
 return
 new
 expectMessage
