Bug 1921008: part 3) Remove event listener when desired event was received in <trusted-types-navigation.html>. r=tschuster
Previously, the event listeners of a previous test run would stay,
contributing to the set of assertions of the current test run.

Differential Revision: https://phabricator.services.mozilla.com/D223595

UltraBlame original commit: 578331c28bb36b6153d117186b8a2d33b026bb2e

--- a/testing/web-platform/tests/trusted-types/trusted-types-navigation.html
+++ b/testing/web-platform/tests/trusted-types/trusted-types-navigation.html
@@ -64,16 +64,11 @@ resolve
 =
 >
 {
-window
-.
-addEventListener
+function
+listener
 (
-"
-message
-"
 e
-=
->
+)
 {
 if
 (
@@ -82,11 +77,31 @@ filter
 e
 )
 )
+{
+window
+.
+removeEventListener
+(
+"
+message
+"
+listener
+)
+;
 resolve
 (
 )
 ;
 }
+}
+window
+.
+addEventListener
+(
+"
+message
+"
+listener
 )
 ;
 }
