Bug 1921008: part 5) Clarify click-loop-breaking mechanism in <trusted-types-navigation.html>. r=tschuster
Before, <navigation-support.html> didn't correctly break the loop, as it
didn't use hashes.

Differential Revision: https://phabricator.services.mozilla.com/D223754

UltraBlame original commit: 1e668345dab26d6153b6382ae93e7c2baf58c85f

--- a/testing/web-platform/tests/trusted-types/trusted-types-navigation.html
+++ b/testing/web-platform/tests/trusted-types/trusted-types-navigation.html
@@ -41,6 +41,24 @@ js
 script
 >
 <
+script
+src
+=
+"
+support
+/
+navigation
+-
+support
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -424,6 +442,12 @@ defaultpolicy
 =
 1
 &
+"
++
+kNavigationAttempted
++
+"
+&
 defaultpolicywashere
 "
 )
@@ -499,7 +523,13 @@ navigation
 support
 .
 html
-#
+?
+"
++
+kNavigationAttempted
++
+"
+&
 continue
 "
 )
@@ -582,7 +612,13 @@ html
 defaultpolicy
 =
 1
-#
+&
+"
++
+kNavigationAttempted
++
+"
+&
 defaultpolicywashere
 "
 )
@@ -752,6 +788,12 @@ frame
 =
 1
 &
+"
++
+kNavigationAttempted
++
+"
+&
 defaultpolicywashere
 "
 )
@@ -835,7 +877,13 @@ html
 frame
 =
 1
-#
+&
+"
++
+kNavigationAttempted
++
+"
+&
 continue
 "
 )
@@ -926,7 +974,13 @@ defaultpolicy
 frame
 =
 1
-#
+&
+"
++
+kNavigationAttempted
++
+"
+&
 defaultpolicywashere
 "
 )
